--- a/styles.css
+++ b/styles.css
@@ -3620,8 +3620,7 @@ input[type="datetime-local"] {
     .inputWrapper .textWrapper input[type=password] ~ .endIcon, .inputWrapper .textWrapper input[type=password] ~ .endIcon {
       cursor: pointer; }
 
-.advancedInput {
-  position: relative; }
+.advancedInput {}
 
 input ~ .dropdown {
   position: absolute;
